# crypto-alert

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/: coingecko.py  helpers.py  main.py  models.py  slack_client.py
src/cardano_alert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: ada_data.json  test_config.yaml  test_helpers.py
